@@ -55,7 +55,7 @@ const PALConfig pal_default_config =
   {VAL_GPIOBODR, VAL_GPIOBCRL, VAL_GPIOBCRH},
   {VAL_GPIOCODR, VAL_GPIOCCRL, VAL_GPIOCCRH},
   {VAL_GPIODODR, VAL_GPIODCRL, VAL_GPIODCRH},
-#if !defined(STM32F10X_LD)
+#if !defined(STM32F10X_LD) && !defined(BOARD_STBEE_MINI)
   {VAL_GPIOEODR, VAL_GPIOECRL, VAL_GPIOECRH},
 #endif
 #if defined(STM32F10X_HD)
