@@ -1,0 +1,6 @@
+# List of all the board related files.
+BOARDSRC = ../boards/STBEE_MINI/board.c \
+	../boards/common/hw_config.c
+
+# Required include directories
+BOARDINC = ../boards/STBEE_MINI
